# Web-Serve

./: .gitignore  CMakeLists.txt  README.md  Web Serve.cpp  Web Serve.sln  Web Serve.vcxproj
Web Serve/: APINode.h  FileSystem.h  HTMLPage.html  README.md  RatelimitNode.cpp  RatelimitNode.h  RouteNode.cpp  RouteNode.h  ServerNode.cpp  ServerNode.h  Web Serve.cpp  Web Serve.vcxproj  Web Serve.vcxproj.filters  api.h  ast.cpp  ast.h  ast_factory.h  ast_manager.cpp  ast_manager.h  cleansocket.h  clientsock.cpp  clientsock.h  components.hpp  databaseCon.h  fileParser.cpp  fileParser.h  httprequest.cpp  httprequest.h  mimetypes.cpp  mimetypes.h  route.h  serverFile.html  serversock.cpp  serversock.h  socket.cpp  socket.hpp
Web Serve/Debug/: vc143.idb
Web Serve/Debug/Web Serve.tlog/: CL.command.1.tlog  (+1 more)
src/: Web Serve.cpp  tasks.txt
src/ast/: ast.cpp  ast.h  ast_factory.h  ast_manager.cpp  ast_manager.h
src/core/: APINode.cpp  APINode.h  FileSystem.cpp  FileSystem.h  RatelimitNode.cpp  RatelimitNode.h  RouteNode.cpp  RouteNode.h  ServerNode.cpp  ServerNode.h  components.hpp  databaseNode.cpp  databaseNode.h  requestNode.h  storeNode.cpp  storeNode.h
src/db/: databaseCon.cpp  databaseCon.h
src/net/: Socket_manager.cpp  Socket_manager.h  cleansocket.cpp  cleansocket.h  clientsock.cpp  serversock.cpp  serversock.h  socket.cpp  socket.hpp
src/process/: connectionRequest.h  dependency.h  process.cpp  process.h
src/resources/: HTMLPage.html  serverFile.html  some file.json
src/util/: PathResolver.cpp  PathResolver.h  fileParser.cpp  fileParser.h  logger.cpp  logger.h  mimetypes.h
(+23 files in other folders)
